# DBConnectionPool

./: .gitignore  CMakeLists.txt
bb_tests/: bb_test_1.py
bb_tests/test_files/: logerror1_-x  logerror3_-x-o  logerror6_incorrect
cfg/: test.xml
lib/libDBConnectionPool/: CMakeLists.txt
lib/libDBConnectionPool/src/: Connection.h  ConnectionManager.cpp  ConnectionManager.h  DBConnectionPool.cpp  DBConnectionPool.h  Settings.cpp  Settings.h
lib/libLogger/: CMakeLists.txt
lib/libLogger/src/: Logger.cpp  Logger.h
src/: CMakeLists.txt  DBConnectionPool_interface.cpp  DBConnectionPool_interface.h  main.cpp  quickSQLClient.cpp
src/ConnectionManager/: ConnectionManager.cpp  ConnectionManager.h
src/ConnectionManager/Connection/: Connection.cpp  Connection.h
src/ConnectionManager/Initialisable/: InitByXML.cpp  InitByXML.h  Initialisable.h
src/ConnectionManager/Settings/: Settings.cpp  Settings.h
src/DBConnectionPool/: DBConnectionPool.cpp  DBConnectionPool.h
src/DBConnectionPool/Initialisable/: InitByXML.cpp  InitByXML.h  Initialisable.h
src/DBConnectionPool/Logger/: Logger.cpp
src/DBConnectionPool/QueueManager/: QueueManager.cpp  QueueManager.h
src/Logger/: Logger.cpp  Logger.h
tests/: CMakeLists.txt  ConnectionManagerTest.cpp  ConnectionManagerTest.h  LogTest.cpp  QueueManagerTest.cpp  QueueManagerTest.h  blackBox.py  mainTest.cpp
tests/cpp/: CMakeLists.txt  ConnectionManagerTest.cpp  ConnectionManagerTest.h  LogTest.cpp  QueueManagerTest.cpp  QueueManagerTest.h  mainTest.cpp
tests/py/: blackBox.py  logerror1_-x  logerror2_-o  logerror4_no_init  logerror5_fatal  logerror7_clear_xml  logerror8_clear_fatal  wr2
unit_tests/: CMakeLists.txt
unit_tests/src/: ConnectionManagerTest.cpp  ConnectionManagerTest.h  LogTest.cpp  mainTest.cpp
